--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.13.1",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
