--- a/app/package.json
+++ b/app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://DakotaWBaker.github.io/react-restaurant",
   "name": "app",
   "version": "0.1.0",
   "private": true,
@@ -7,11 +8,15 @@
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "dayjs": "^1.11.5",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "save-dev": "^0.0.1-security"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
